force-app/main/default/objects/Contact/fields/Social_Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Insurance_Number__c</fullName>
    <label>SIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>