force-app/main/default/objects/Contact/fields/Work_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone_Extension__c</fullName>
    <label>Work Ext.</label>
    <length>6</length>
    <type>Text</type>
</CustomField>